    This has now been fixed.

*** Use shell-like parsing for =.stowrc= arguments

    If a file path or regex in =.stowrc= has a space, the option
    previously broke because it would have been treated as two options
    instead of one.  Now it's possible to include options using
    shell-like quoting, e.g.:

    --target="$HOME/dir with space in/file with space in"
    --ignore=\\$FOO\\$

*** Fix Docker builds.

    Fix the return error 100 that was happening when trying to run
    the build script with docker.

*** Various maintainer tweaks

    Further improved the release process and its documentation in
    various minor ways.  Perl 5.40 has been added to the test matrix.

* Changes in version 2.4.0

*** --dotfiles now works with directories

    A long-standing bug preventing the --dotfiles option from working
    correctly with directories has been fixed.

    It should also works in combination with the --compat option.

*** Eliminated a spurious warning on unstowing

    2.3.1 introduced a benign but annoying warning when unstowing
    in certain circumstances.  It looked like:

      BUG in find_stowed_path? Absolute/relative mismatch between Stow dir X and path Y

    This was caused by erroneous logic, and has now been fixed.

*** Unstowing logic has been improved in other cases

    Several other improvements have been made internally to the
    unstowing logic.  These changes should all be either invisible
    (except for changes to debug output) or improvements, but if you
    encounter any unexpected behaviour, please report it as directed
    in the manual.

*** Improved debug output

    Extra output resulting from use of the -v / --verbose flag
    now appears in a more logical and understandable way.

*** Janitorial tasks

    Users are not substantially affected by these changes.

***** Added some more information from the web page to the README

***** Made some improvements to the documentation

***** Improve readability of source code
